--- a/Matrix Multiplication.ipynb
+++ b/Matrix Multiplication.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
     "x = [1,\n",
     "     0,\n",
     "     0,\n",
-    "     2]\n",
+    "     3]\n",
     "\n",
     "y = [0,\n",
     "     0,\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 21, 33, 45]\n"
+      "[13, 29, 45, 61]\n"
      ]
     }
    ],
@@ -73,8 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = A[1][2]"
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +93,7 @@
        "7"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,8 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grades = [83, 95, 91, 87, 70, 85, 82, 100, 67, 73, 77, 0]\n",
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +126,7 @@
        "Counter({0: 1, 60: 1, 70: 3, 80: 4, 90: 2, 100: 1})"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x117c53160>"
+       "<matplotlib.text.Text at 0x10eb88358>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAEWCAYAAABliCz2AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFq1JREFUeJzt3Xu4JHV95/H3h5vIHZyJgsMwKASCiqCDYCAkokYQHnC9\nJBBveJvoRoFd1wQ06yX7JOImq5KoKIpBRSGGS2Rho9xFAS+MAhkYwRsKiiIiDKDh+t0/qiY0JzM9\nPWe6+syZer+ep5/prq6q77fO6fmc6l9VV6eqkCSt+9ab6QYkSZNh4EtSTxj4ktQTBr4k9YSBL0k9\nYeBLUk8Y+FrnJLk0yetnug9pbWPga+KS7JfkiiR3JbkjyeVJ9mqfOzLJV2e6RxitlyRPSXJ+ux13\nJlmc5IWT6lFaHRvMdAPqlyRbAOcCbwI+D2wE/B5w30z2tQb+L3AicEj7eC8g4yyQZIOqenCc61Q/\nuYevSfttgKo6raoeqqrfVNX5VXVtkt8BPgo8O8k9Se6E/zxEM3XPO8nzk3ynfcfwIaYEbpLXJlma\n5FdJvpRkh4HnKskbk3y33UP/cBor7GXKeucAOwIfr6r729vlVTXY22FJrk6yLMn3kxzYTt8uyTnt\nO4PvJXnDwDLvTnJGklOTLAOOTLJekmPbdfwyyeeTbNPOv3E77y/bbfhmksevyS9J6yYDX5N2I/BQ\nkk8lOSjJ1sufqKqlwBuBK6tqs6raalUra0P3LOAvgTnA94F9B54/DHg78GJgLvAV4LQpqzmEZs98\nd+CPgBeM2Msvge8BpyZ50dSQTfIs4NPA24CtgP2Bm9qnTwduAbYDXgr8TZIDBhY/DDijXe6zwFuA\nFwG/3y7zK+DD7byvBrYEtgce1/b9m5X8yNRjBr4mqqqWAfsBBXwc+EW7pzvdPdIXAtdV1RlV9QDw\nQeBnA8+/EXhvVS1th0X+BthjcC8fOL6q7qyqHwOXAHuMuC0FPIcmxP8PcGuSy5Ls3M7yOuCTVXVB\nVT1cVT+pqu8k2Z7mj9JfVNW/V9XVwCeAVw2s/sqq+pd2ud+02/GOqrqlqu4D3g28NMkGwAM0Qb9T\n+65pcftzlh7FwNfEteF7ZFXNA55Ks8f6wWmubjvg5oF11+BjYAfghHao407gDpohnycOzDP4B+LX\nwGajFm8D+M1V9eS21r00e/XQ7HF/fyU931FVdw9M+9GUnm5+9CLsAJw9sB1LgYeAxwOfAb4EnJ7k\np0n+d5INR90G9YeBrxlVVd8BTqEJfmj2/Ke6F9hk4PETBu7fShOsACTJ4GOa4PzTqtpq4PbYqrpi\nlPZGmOeRmatuphlmWb4tNwNPXsGsPwW2SbL5wLT5wE+G1L4ZOGjKdmzcvmt4oKreU1W7Ab9LM0T1\nKqQpDHxNVJJdk7w1ybz28fbAEcDX2ll+DsxLstHAYlcDL06ySZKdaIZKljsPeEqSF7fDG0fx6D8I\nHwWOS/KUtt6WSV42Yrsr6mVwW7ZO8p4kO7UHVecArx3YlpOB1yR5bvv8E5Ps2v5huAJ4b3vAdfd2\nm04d0stHgb9ePhSVZG57fIIkz0nytCTrA8tohngeHnEb1SMGvibtbmBv4OtJ7qUJxyXAW9vnLwau\nA36W5PZ22geA+2kC+FM0BzEBqKrbgZcBx9McRN0ZuHzg+bOB99EMdyxrax00Yq8r6mXQ/cAC4EKa\noF1Cc3rpkW3tbwCvafu/C/gyzdAMNH/kFtDs7Z8NvKuqLhzSywnAOcD5Se6m+bnt3T73BJoDvMto\nhnq+TDPMIz1K/AIUSeoH9/AlqScMfEnqCQNfknrCwJeknlirLp42Z86cWrBgwUy3IUmzxuLFi2+v\nqrmjzLtWBf6CBQu46qqrZroNSZo1kvxo1Hkd0pGknjDwJaknDHxJ6gkDX5J6wsCXpJ4w8CWpJwx8\nSeoJA1+SesLAl6SeMPAlqScMfEnqCQNfknrCwJeknjDwJaknDHxJ6gkDX5J6wsCXpJ4w8CWpJwx8\nSeoJA1+SesLAl6SeMPAlqScMfEnqCQNfknrCwJeknjDwJaknDHxJ6gkDX5J6wsCXpJ4w8CWpJwx8\nSeoJA1+SesLAl6SeMPAlqScMfEnqCQNfknrCwJeknjDwJaknDHxJ6onOAz/J+km+neTcrmtJklZu\nEnv4RwNLJ1BHkjREp4GfZB5wMPCJLutIklZtg47X/0Hgz4HNVzZDkkXAIoD58+d33I6ktdmCY8/7\nj/s3HX/wDHaybupsDz/JIcBtVbV42HxVdVJVLayqhXPnzu2qHUnqvS6HdPYFDk1yE3A6cECSUzus\nJ0kaorPAr6rjqmpeVS0ADgcurqpXdFVPkjSc5+FLUk90fdAWgKq6FLh0ErUkSSvmHr4k9YSBL0k9\nYeBLUk8Y+JLUEwa+JPWEgS9JPWHgS1JPGPiS1BMGviT1hIEvST1h4EtSTxj4ktQTBr4k9YSBL0k9\nYeBLUk8Y+JLUEwa+JPWEgS9JPWHgS1JPGPiS1BMGviT1hIEvST1h4EtSTxj4ktQTBr4k9cQqAz/J\n+0aZJklau42yh//8FUw7aNyNSJK6tcHKnkjyJuC/Ak9Kcu3AU5sDl3fdmCRpvFYa+MDngH8F3gsc\nOzD97qq6o9OuJEljt9LAr6q7gLuAI5KsDzy+nX+zJJtV1Y8n1KMkaQyG7eEDkOTNwLuBnwMPt5ML\n2L27tiRJ47bKwAeOAXapql923YwkqTujnKVzM83QjiRpFhtlD/8HwKVJzgPuWz6xqt7fWVeSpLEb\nJfB/3N42am8jSbIxcBnwmLbOGVX1ruk0KUlac6sM/Kp6zzTXfR9wQFXdk2RD4KtJ/rWqvjbN9UmS\n1sAoZ+lcQnNWzqNU1QHDlquqAu5pH27Y3v7TeiRJkzHKkM7/GLi/MfAS4MFRVt6ev78Y2An4cFV9\nfQXzLAIWAcyfP3+U1Urq2IJjzwPgpuMPnuFONE6jDOksnjLp8iTfGGXlVfUQsEeSrYCzkzy1qpZM\nmeck4CSAhQsX+g5AkjoyypDONgMP1wOeCWy5OkWq6s52aOhAYMmq5pckjd8oQzqLacbeQzOU80Pg\ndataKMlc4IE27B9Lc9VNL6ssSTNklCGdHae57m2BT7Xj+OsBn6+qc6e5LknSGhplSGdD4E3A/u2k\nS4GPVdUDw5arqmuBPde0QUnSeIwypHMizSmVH2kfv7Kd9vqumpIkjd8ogb9XVT194PHFSa7pqiFJ\nUjdGuXjaQ0mevPxBkicBD3XXkiSpC6Ps4b8NuCTJD2jO1NkBeE2nXUmSxm6Us3QuSrIzsEs76Yaq\num/YMpKktc+wLzF/BZCq+kwb8Ne201+Z5KGq+tykmpQkrblhY/hvAc5ewfSzgLd2044kqSvDAn/D\nqrpn6sSqupfmNE1J0iwyLPAfm2TTqROTbM5qfBGKJGntMCzwTwbOSLLD8glJFgCnt89JkmaRlR60\nraq/S3IPcFmSzdrJ9wDHV9WJE+lOkjQ2Q0/LrKqPAh9th3Goqrsn0pUkaexG+eCVQS9J64BRLq0g\nSVoHrDLwkzxmlGmSpLXbKHv4V444TZK0Fht2aYUnAE+kOR9/T5oLpwFsAWwygd4kSWM07KDtC4Aj\ngXnA+wem3w28vcOeJEkdGHYe/qdovpP2JVV15gR7kiR1YJTTMs9N8ifAgsH5q+qvumpKkjR+owT+\nF4C7gMWA18GXpFlqlMCfV1UHdt6JJKlTo5yWeUWSp3XeiSSpU6Ps4e8HHJnkhzRDOgGqqnbvtDNJ\n0liNEvgHdd6FJKlzqxzSqaofAdsDB7T3fz3KcpKktcso19J5F/AXwHHtpA2BU7tsSpI0fqPsqf8X\n4FDgXoCq+imweZdNSZLGb5TAv7+qCiiAFX3PrSRp7TdK4H8+yceArZK8AbgQ+Hi3bUmSxm2VZ+m0\n3237fGAZsAvwzqq6oPPOJEljNepXHF4AGPKSNIsNux7+3bTj9itSVVt00pEkqRPDLo+8OUCS/wXc\nCnyG5lO2Lwe2nUh3kqSxGeWg7aFV9ZGquruqllXVicBhXTcmSRqvUQL/3iQvT7J+kvWSvJz2nPxh\nkmyf5JIk1ye5LsnRa96uJGm6Rgn8PwH+CPh5e3tZO21VHgTeWlW7AfsAf5Zkt+k2KklaM6OclnkT\n0xjCqapbacb+qaq7kyyl+VL061d3XZKkNbfKwE/yj6zgbJ2qeu2oRZIsAPYEvr6C5xYBiwDmz58/\n6iolaawWHHseADcdf/AMd9Kdkb7TduD+xjTX1vnpqAWSbAacCRxTVcumPl9VJwEnASxcuHClp4FK\nktbMKEM6Zw4+TnIa8NVRVp5kQ5qw/2xVnTWtDiVJYzGd69rvDPzWqmZKEuBkYGlVvX8adSRJYzTK\nGP7UT9z+jOb6+KuyL/BK4N+SXN1Oe3tV/b/V7lKStMZGGdKZ1rXvq+qrNJ/MlSStBUb5xquLRpkm\nSVq7Dbt42sbAJsCcJFvzyN76FjTn00uSZpFhQzp/ChwDbAcs5pHAXwZ8qOO+JEljNuxqmScAJyR5\nS1X9wwR7kiR1YKVj+En2SvKE5WGf5FVJvpDk75NsM7kWJUnjMOyg7ceA+wGS7A8cD3wauIv2k7GS\npNlj2Bj++lV1R3v/j4GT2k/dnjlwXr0kaZYYtoe/fpLlfxCeC1w88NxI34UrSVp7DAvu04AvJ7kd\n+A3wFYAkO9EM60iSZpFhZ+n8dfsBq22B86tq+eUV1gPeMonmJEnjM3Ropqq+toJpN3bXjiSpK9O5\nWqYkaRYy8CWpJwx8SeoJA1+SesLAl6SeMPAlqScMfEnqCQNfknrCwJeknjDwJaknDHxJ6gkDX5J6\nwsCXpJ4w8CWpJwx8SeoJA1+SesLAl6SeMPAlqScMfEnqCQNfknrCwJeknjDwJaknDHxJ6onOAj/J\nJ5PclmRJVzUkSaPrcg//FODADtcvSVoNnQV+VV0G3NHV+iVJq2eDmW4gySJgEcD8+fOntY4Fx54H\nwE3HHzy2vqSZtvx1Db6212WTzK8ZP2hbVSdV1cKqWjh37tyZbkeS1lkzHviSpMkw8CWpJ7o8LfM0\n4EpglyS3JHldV7UkSavW2UHbqjqiq3VLklafQzqS1BMGviT1hIEvST1h4EtSTxj4ktQTBr4k9YSB\nL0k9YeBLUk8Y+JLUEwa+JPWEgS9JPWHgS1JPGPiS1BMGviT1hIEvST1h4EtSTxj4ktQTBr4k9YSB\nL0k9YeBLUk8Y+JLUEwa+JPWEgS9JPWHgS1JPGPiS1BMGviT1hIEvST1h4EtSTxj4ktQTBr4k9YSB\nL0k9YeBLUk8Y+JLUEwa+JPWEgS9JPdFp4Cc5MMkNSb6X5Ngua0mShuss8JOsD3wYOAjYDTgiyW5d\n1ZMkDdflHv6zgO9V1Q+q6n7gdOCwDutJkoZIVXWz4uSlwIFV9fr28SuBvavqzVPmWwQsah/uAtww\nzZJzgNunueyamKm6M1nbbV73685kbbd59exQVXNHmXGDaRYYm6o6CThpTdeT5KqqWjiGlmZF3Zms\n7Tav+3Vnsrbb3J0uh3R+Amw/8HheO02SNAO6DPxvAjsn2THJRsDhwDkd1pMkDdHZkE5VPZjkzcCX\ngPWBT1bVdV3VYwzDQrOs7kzWdpvX/bozWdtt7khnB20lSWsXP2krST1h4EtST8z6wJ/k5RuSfDLJ\nbUmWDEzbJskFSb7b/rt1B3W3T3JJkuuTXJfk6EnUTrJxkm8kuaat+55J1J3Sw/pJvp3k3EnVTnJT\nkn9LcnWSqyZVt62zVZIzknwnydIkz57A73mXdluX35YlOWaC2/zf2tfXkiSnta+7Sfyej25rXpfk\nmHZaJ3VXNzuSHNdm2g1JXjCOHmCWB/4MXL7hFODAKdOOBS6qqp2Bi9rH4/Yg8Naq2g3YB/izdju7\nrn0fcEBVPR3YAzgwyT4TqDvoaGDpwONJ1X5OVe0xcG70pOqeAHyxqnYFnk6z7Z3Wrqob2m3dA3gm\n8Gvg7K7rAiR5InAUsLCqnkpzgsfhXddO8lTgDTRXBHg6cEiSnTqsewojZkf7f/tw4CntMh9ps27N\nVdWsvQHPBr408Pg44LiOay4Algw8vgHYtr2/LXDDBLb7C8DzJ1kb2AT4FrD3pOrSfHbjIuAA4NxJ\n/byBm4A5U6ZNou6WwA9pT6aYidcY8IfA5RPc5icCNwPb0Jw1eG7bQ6e1gZcBJw88/p/An3dZd9Ts\nmJpjNGc6PnscPczqPXweebEsd0s7bZIeX1W3tvd/Bjy+y2JJFgB7Al+fRO12SOVq4DbggqqaSN3W\nB2n+Ez48MG0StQu4MMniNJf+mFTdHYFfAP/YDmN9IsmmE6q93OHAae39zutW1U+AvwN+DNwK3FVV\n50+g9hLg95I8LskmwAtpPig6yZ/1ymp1lmuzPfDXKtX8Oe7sPNckmwFnAsdU1bJJ1K6qh6p5qz8P\neFb7VrjzukkOAW6rqsVDeuvq571fu80H0Qyf7T+huhsAzwBOrKo9gXuZMqTQ5Wus/YDkocA/T32u\nw9/z1jQXVdwR2A7YNMkruq5dVUuB9wHnA18ErgYe6rrukH4mUmu2B/7acPmGnyfZFqD997YuiiTZ\nkCbsP1tVZ02yNkBV3QlcQjOmOIm6+wKHJrmJ5kqrByQ5dRK1271Oquo2mrHsZ02iLs2e3C3tuyiA\nM2j+AEzq93wQ8K2q+nn7eBJ1nwf8sKp+UVUPAGcBvzuJ2lV1clU9s6r2B34F3DiJugNWVquzXJvt\ngb82XL7hHODV7f1X04yvj1WSACcDS6vq/ZOqnWRukq3a+4+lOW7wna7rAlTVcVU1r6oW0PxeL66q\nV3RdO8mmSTZffp9mPHlJ13UBqupnwM1JdmknPRe4fhK1W0fwyHAOE6r7Y2CfJJu0r/Pn0hyonsT/\nq99q/50PvBj43CTqDlhZrXOAw5M8JsmOwM7AN8ZScZwHQmbiRjP2diPwfeAdHdc6jWac8QGavbHX\nAY+jObD4XeBCYJsO6u5H83bvWpq3nle3291pbWB34Ntt3SXAO9vpnW/zlD7+gEcO2na9zU8Crmlv\n1y1/TU1qm2nOhrqq/Zn/C7D1hF5jmwK/BLYcmDapbX4PzY7EEuAzwGMmtM1fofmDeg3w3C63eXWz\nA3hHm2k3AAeNa5u9tIIk9cRsH9KRJI3IwJeknjDwJaknDHxJ6gkDX5J6wsBXLyR5b5LnJHlRkuPa\naack+WGaq4HemOTTSeZNc/0Lk/x9e//IJB8aZ//SOBj46ou9ga8Bvw9cNjD9bdVcDXQXms8cXNx+\niG+1VNVVVXXUWDqVOmLga52W5G+TXAvsBVwJvB44Mck7B+erxgdoLmJ1ULvsHya5Msm3kvxzey0j\nkuyV5Ir2ncE3kmye5A/SXrN/Sv25Sc5M8s32tm/X2yytjIGvdVpVvY3mU42n0IT+tVW1e1X91UoW\n+Rawa5I5wF8Cz6uqZ9B8+vW/t3v//wQc3b4zeB7wmyEtnAB8oKr2Al4CfGIMmyVNywYz3YA0Ac+g\n+fj8rjz6y1RWJO2/+9B8qc7lzSVe2IjmHcIuwK1V9U2Aaq9a2s6zIs8Ddht4foskm1XVPdPaEmkN\nGPhaZyXZg2bPfh5wO82XuKS9vv+zV7LYnjTXNwnN9f+PmLLOp61mG+sB+1TVv6/mctLYOaSjdVZV\nXV3Nde1vpNlbvxh4QTVf5/eoYZg0jqL55qEv0hzg3bf92rvlV9H8bdpvKUqyVzt98yTDdpzOB94y\nUGeP8W2htHoMfK3TkswFflVVDwO7VtX1U2b52yTX0PxR2Ivmu2zvr6pfAEcCp7UHfa9sl78f+GPg\nH9rlLgA2HtLCUcDCJNcmuR544zi3T1odXi1TknrCPXxJ6gkDX5J6wsCXpJ4w8CWpJwx8SeoJA1+S\nesLAl6Se+P91Jdcn1kAlcgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x117af6cc0>"
+       "<matplotlib.figure.Figure at 0x10b839160>"
       ]
      },
      "metadata": {},
